--- a/promo.html
+++ b/promo.html
@@ -1,5 +1,12 @@
 <html>
+  <head>
+    <script type="text/javascript" async
+  src="//l.getsitecontrol.com/l46l0d4m.js">
+</script>
+  </head>
   <body>
-    ads
+ <script type="text/javascript" async
+  src="//l.getsitecontrol.com/l46l0d4m.js">
+</script>
   </body>
 </html>
