--- a/promo.html
+++ b/promo.html
@@ -1,12 +1,10 @@
 <html>
   <head>
+    <title>Netflix Promo</title>
     <script type="text/javascript" async
   src="//l.getsitecontrol.com/l46l0d4m.js">
 </script>
   </head>
   <body>
- <script type="text/javascript" async
-  src="//l.getsitecontrol.com/l46l0d4m.js">
-</script>
   </body>
 </html>
