--- a/promo.html
+++ b/promo.html
@@ -4,6 +4,12 @@
     <script type="text/javascript" async
   src="//l.getsitecontrol.com/l46l0d4m.js">
 </script>
+    <style>
+body  {
+  background-image: url("https://i.imgur.com/r0OWA7d.jpg");
+  background-color: #cccccc;
+}
+</style>
   </head>
   <body>
   </body>
