--- a/promo.html
+++ b/promo.html
@@ -1,9 +1,10 @@
 <html>
   <head>
     <title>Netflix Promo</title>
-        <style>
+<style>
 body  {
-  background-image: url("https://i.imgur.com/r0OWA7d.jpg");
+  background-image: url("https://i.imgur.com/f8IEeO9.jpg");
+  background-color: #cccccc;
 }
 </style>
     <script type="text/javascript" async
