--- a/promo.html
+++ b/promo.html
@@ -4,6 +4,7 @@
 <style>
 body  {
   background-image: url("https://i.imgur.com/f8IEeO9.jpg");
+  background-position: 50% 50%
   background-color: #cccccc;
 }
 </style>
