--- a/promo.html
+++ b/promo.html
@@ -3,8 +3,7 @@
     <title>Netflix Promo</title>
 <style>
 body  {
-  background-image: url("https://i.imgur.com/f8IEeO9.jpg");
-  background-position: 50% 50%;
+  background-image: url("https://i.imgur.com/f8IEeO9.jpg") 50% 50% no-repeat;
   background-color: #cccccc;
 }
 </style>
